All ready to go

--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -39,7 +39,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .channels-Ie2l6A,
 .theme-dark .wrapper-1Rf91z,
 .theme-dark .scroller-2TZvBN,
-.container-PNkimc,
+.container-3w7J-x,
 .theme-dark .chat-3bRxxu, 
 .theme-dark .chat-3bRxxu form, 
 .theme-dark .content-yTz4x3,
@@ -509,52 +509,52 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: rgba(255, 255, 255, 0.63);
 }
 
-.theme-dark .wrapper-1ucjTd:hover .content-3at_AU,
-.theme-dark .listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh {
+.theme-dark .wrapper-2jXpOf:hover .content-1x5b-n,
+.theme-dark .listDefault-3ir5aS .clickable-1lCRLF:hover .content-1Wq3SX {
     background-color: rgba(0, 140, 153, 0.26);
 }
 
-.theme-dark .wrapper-1ucjTd:hover .actionIcon-2Hi9ZG,
-.theme-dark .wrapper-1ucjTd:hover .name-3_Dsmg,
-.theme-dark .wrapper-1ucjTd:hover .icon-1_QxNX {
+.theme-dark .wrapper-2jXpOf:hover .actionIcon-2Hi9ZG,
+.theme-dark .wrapper-2jXpOf:hover .name-23GUGE,
+.theme-dark .wrapper-2jXpOf:hover .icon-1DeIlz {
     color: #008c99;
 }
 
-.theme-dark .wrapper-1ucjTd.modeUnread-1zpFdA .icon-1_QxNX {
+.theme-dark .wrapper-2jXpOf.modeUnread-1qO3K1 .icon-1DeIlz {
     color: white;
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU,
-.theme-dark .listDefault-2y5Z9D .clickable-23RaYz.selected-3TGCSZ .content-3xS9Lh {
+.theme-dark .wrapper-2jXpOf.modeSelected-346R90 .content-1x5b-n, 
+.theme-dark .wrapper-2jXpOf.modeSelected-346R90:hover .content-1x5b-n,
+.theme-dark .listDefault-3ir5aS .clickable-1lCRLF.selected-3t3Csj .content-1Wq3SX {
     background-color: #008c99 !important;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .actionIcon-2Hi9ZG,
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .icon-1_QxNX,
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .name-3_Dsmg,
-.wrapper-pZmgj4  {
+.theme-dark .wrapper-2jXpOf.modeSelected-346R90 .actionIcon-2Hi9ZG,
+.theme-dark .wrapper-2jXpOf.modeSelected-346R90 .icon-1DeIlz,
+.theme-dark .wrapper-2jXpOf.modeSelected-346R90 .name-23GUGE,
+.wrapper-2tAnRe  {
     color: white;
 }
 
-.content-3at_AU,
-.content-3xS9Lh {
+.content-1x5b-n,
+.content-1Wq3SX {
     border-radius: 8px;
 }
 
-.total-3tKGEB:after {
+.total-i6us2n:after {
     border-right-color: transparent;
 }
 
-.users-i_3-kL {
+.users-3kndPl {
     background-color: black;
 }
 
-.total-3tKGEB {
+.total-i6us2n {
     background-color: #008c99;
     width: 28px;
 }
 
-.unread-3zKkbm {
+.unread-2lAfLh {
     display: none;
 } 
 
