--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -28,7 +28,7 @@
 .scroller-305q3I,
 .theme-dark .messagesWrapper-3lZDfY,
 .messages-3amgkR,
-.container-PNkimc,
+.container-3w7J-x,
 .sidebar-2K8pFh,
 .theme-dark .wrapper-1Rf91z,
 .theme-dark .scroller-2TZvBN,
@@ -629,10 +629,10 @@
 }
 
 /* Next Section */
-.avatarSpeaking-3MqCHL {
+.avatarSpeaking-2IGMRN {
     border: 2px solid #94e067;
 }
-.avatar-3elDyV {
+.avatar-3tNQiO {
   box-shadow: none;
 }
 
@@ -792,37 +792,37 @@
 .theme-dark .edited-3sfAzf {
   color: silver;
 }
-.unread-3zKkbm {
+.unread-2lAfLh {
   display: none;
 }
-.theme-dark .wrapper-1ucjTd.modeUnread-1zpFdA .icon-1_QxNX {
+.theme-dark .wrapper-2jXpOf.modeUnread-1qO3K1 .icon-1DeIlz {
      color: white;
 }
-.content-3at_AU {
+.content-1x5b-n {
   border-radius: 9px;
 }
-.theme-dark .wrapper-1ucjTd:hover .content-3at_AU,
-.theme-dark .listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh {
+.theme-dark .wrapper-2jXpOf:hover .content-1x5b-n,
+.theme-dark .listDefault-3ir5aS .clickable-1lCRLF:hover .content-1Wq3SX {
   background-color: rgba(0,0,0,.2);
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU,
-.theme-dark .listDefault-2y5Z9D .clickable-23RaYz.selected-3TGCSZ .content-3xS9Lh {
+.theme-dark .wrapper-2jXpOf.modeSelected-346R90 .content-1x5b-n, .theme-dark .wrapper-2jXpOf.modeSelected-346R90:hover .content-1x5b-n,
+.theme-dark .listDefault-3ir5aS .clickable-1lCRLF.selected-3t3Csj .content-1Wq3SX {
    background: linear-gradient(270deg, transparent 30%, rgba(18, 155, 27,1) 100%);
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .icon-1_QxNX {
+.theme-dark .wrapper-2jXpOf.modeSelected-346R90 .icon-1DeIlz {
   color: white;
 }
-.content-3xS9Lh {
+.content-1Wq3SX {
   border-radius: 9px;
 }
-.users-i_3-kL {
+.users-3kndPl {
   background-color: rgba(0,0,0,0.4);
   color: white;
 }
-.total-3tKGEB:after {
+.total-i6us2n:after {
   border: none;
 }
-.total-3tKGEB {
+.total-i6us2n {
   background-color: #129b1a;
   color: white;
   width: 25px;
