--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -1625,59 +1625,59 @@
     box-shadow: 3px 4px 12px 3px rgba(0, 0, 0, 0.6);
 }
 
-.container-PNkimc {
+.container-3w7J-x {
     background-color: transparent;
 }
 
-.avatarSpeaking-3MqCHL {
+.avatarSpeaking-2IGMRN {
     border: 2px solid #21ac21;
     box-shadow: none;
 }
 
-.modeUnread-1zpFdA .icon-1_QxNX, 
-.modeUnread-1zpFdA:hover .icon-1_QxNX {
+.modeUnread-1qO3K1 .icon-1DeIlz, 
+.modeUnread-1qO3K1:hover .icon-1DeIlz {
     color: white;
 }
 
-.unread-3zKkbm {
+.unread-2lAfLh {
     display: none;
 }
 
-.wrapper-1ucjTd:hover .content-3at_AU,
-.listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh {
+.wrapper-2jXpOf:hover .content-1x5b-n,
+.listDefault-3ir5aS .clickable-1lCRLF:hover .content-1Wq3SX {
 	background-color: rgba(144, 30, 80, .4);
 }
 
-.content-3at_AU,
-.content-3xS9Lh {
+.content-1x5b-n,
+.content-1Wq3SX {
 	border-radius: 7px;
 }
 
-.modeSelected-1zApJ_ .content-3at_AU,
-.modeSelected-1zApJ_:hover .content-3at_AU,
-.listDefault-2y5Z9D .clickable-23RaYz.selected-3TGCSZ .content-3xS9Lh {
+.modeSelected-346R90 .content-1x5b-n,
+.modeSelected-346R90:hover .content-1x5b-n,
+.listDefault-3ir5aS .clickable-1lCRLF.selected-3t3Csj .content-1Wq3SX {
 	background-color: rgba(88, 32, 96, .8);
 }
 
-.wrapper-1ucjTd.modeLocked-SZJhTy .icon-1_QxNX,
-.wrapper-1ucjTd.modeLocked-SZJhTy .name-3_Dsmg {
+.wrapper-2jXpOf.modeLocked-SZJhTy .icon-1DeIlz,
+.wrapper-2jXpOf.modeLocked-SZJhTy .name-23GUGE {
      color: rgb(215, 34, 34);
 }
 
-.users-i_3-kL,
+.users-3kndPl,
 .iconBadge-qZ4Ksk {
     background-color: #582060;
 }
 
-.total-3tKGEB {
+.total-i6us2n {
     background-color: #901E50;
 }
 
-.total-3tKGEB:after {
+.total-i6us2n:after {
     display: none;
 }
 
-.wrapper-pZmgj4,
+.wrapper-2tAnRe,
 .membersGroup-v9BXpm {
     color: white;
 }
