--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -819,14 +819,14 @@
     display: none;
 }
 
-.container-PNkimc .unread-1xRYoj {
+.container-3w7J-x .unread-1xRYoj {
     background-color: #731838;
     border-radius: 6px;
     height: 35px;
     opacity: .8;
 }
 
-.container-PNkimc .unread-1xRYoj[style*="transform: translateY(-180%);"] {
+.container-3w7J-x .unread-1xRYoj[style*="transform: translateY(-180%);"] {
     top: -30px;
 }
 
@@ -2071,59 +2071,59 @@
     background-color: rgba(0, 0, 0, 0.22) !important;
 }
 
-.container-PNkimc {
+.container-3w7J-x {
     background-color: transparent;
 }
 
-.avatarSpeaking-3MqCHL {
+.avatarSpeaking-2IGMRN {
     border: 2px solid #21ac21;
     box-shadow: none;
 }
 
-.modeUnread-1zpFdA .icon-1_QxNX, 
-.modeUnread-1zpFdA:hover .icon-1_QxNX {
+.modeUnread-1qO3K1 .icon-1DeIlz, 
+.modeUnread-1qO3K1:hover .icon-1DeIlz {
     color: white;
 }
 
-.unread-3zKkbm {
+.unread-2lAfLh {
     display: none;
 }
 
-.wrapper-1ucjTd:hover .content-3at_AU,
-.listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh {
+.wrapper-2jXpOf:hover .content-1x5b-n,
+.listDefault-3ir5aS .clickable-1lCRLF:hover .content-1Wq3SX {
 	background-color: rgba(127, 37, 66, .4);
 }
 
-.content-3at_AU,
-.content-3xS9Lh {
+.content-1x5b-n,
+.content-1Wq3SX {
 	border-radius: 7px;
 }
 
-.modeSelected-1zApJ_ .content-3at_AU,
-.modeSelected-1zApJ_:hover .content-3at_AU,
-.listDefault-2y5Z9D .clickable-23RaYz.selected-3TGCSZ .content-3xS9Lh {
+.modeSelected-346R90 .content-1x5b-n,
+.modeSelected-346R90:hover .content-1x5b-n,
+.listDefault-3ir5aS .clickable-1lCRLF.selected-3t3Csj .content-1Wq3SX {
 	background-color: rgba(115, 24, 56, .8);
 }
 
-.wrapper-1ucjTd.modeLocked-SZJhTy .icon-1_QxNX,
-.wrapper-1ucjTd.modeLocked-SZJhTy .name-3_Dsmg {
+.wrapper-2jXpOf.modeLocked-SZJhTy .icon-1DeIlz,
+.wrapper-2jXpOf.modeLocked-SZJhTy .name-23GUGE {
      color: rgb(215, 34, 34);
 }
 
-.users-i_3-kL,
+.users-3kndPl,
 .iconBadge-qZ4Ksk {
     background-color: #731838;
 }
 
-.total-3tKGEB {
+.total-i6us2n {
     background-color: #4d1627;
 }
 
-.total-3tKGEB:after {
+.total-i6us2n:after {
     display: none;
 }
 
-.wrapper-pZmgj4,
+.wrapper-2tAnRe,
 .membersGroup-v9BXpm {
     color: white;
 }
