--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -1188,6 +1188,7 @@
 
 .wrapper-sa6paO {
     overflow: visible;
+    z-index: 2;
 }
 
 .item-2hkk8m {
@@ -1248,7 +1249,7 @@
     opacity: 1;
 }
 
-.container-PNkimc {
+.container-3w7J-x {
     background-color: transparent;
 }
 
@@ -1337,7 +1338,7 @@
 
 .theme-dark .input-UJ9Tr3,
 .subtext-3CDbHg,
-.wrapper-pZmgj4,
+.wrapper-2tAnRe,
 .addButton-1BORro {
     color: white;
 }
@@ -1347,7 +1348,7 @@
     opacity: 1;
 }
 
-.avatarSpeaking-3MqCHL {
+.avatarSpeaking-2IGMRN {
     box-shadow: 0 0 12px 1px rgb(66, 205, 39),0 0 12px 1px rgb(90, 215, 65),0 0 12px 1px rgb(83, 184, 62);
 }
 
@@ -1356,27 +1357,27 @@
     color: white;
 }
 
-.total-3tKGEB:after {
+.total-i6us2n:after {
     border: none;
 }
 
-.total-3tKGEB {
+.total-i6us2n {
     padding-left: 3px;
     width: 30px;
     border-left: 1px solid rgba(255, 255, 255, 0.24);
 }
 
-.users-i_3-kL {
+.users-3kndPl {
     padding-right: 5px;
     width: 30px;
 }
 
-.users-i_3-kL,
-.total-3tKGEB {
+.users-3kndPl,
+.total-i6us2n {
     background-color: #6b82ce;
 }
 
-.unread-3zKkbm,
+.unread-2lAfLh,
 .icon-2doZ3q, 
 .iconContainer-2ZxvJk,
 .icon-WnO6o2 {
@@ -1388,55 +1389,55 @@
     color: white !important;
 }
 
-.name-3_Dsmg,
-.icon-1_QxNX {
+.name-23GUGE,
+.icon-1DeIlz {
     color: white;
     opacity: 0.4;
 }
 
-.modeUnread-1zpFdA .name-3_Dsmg, 
-.modeUnread-1zpFdA:hover .name-3_Dsmg,
-.modeUnread-1zpFdA .icon-1_QxNX, 
-.modeUnread-1zpFdA:hover .icon-1_QxNX {
+.modeUnread-1qO3K1 .name-23GUGE, 
+.modeUnread-1qO3K1:hover .name-23GUGE,
+.modeUnread-1qO3K1 .icon-1DeIlz, 
+.modeUnread-1qO3K1:hover .icon-1DeIlz {
     color: white;
     opacity: 1;
 }
 
-.modeSelected-1zApJ_ .name-3_Dsmg, 
-.modeSelected-1zApJ_:hover .name-3_Dsmg,
-.modeSelected-1zApJ_ .icon-1_QxNX, 
-.modeSelected-1zApJ_:hover .icon-1_QxNX {
+.modeSelected-346R90 .name-23GUGE, 
+.modeSelected-346R90:hover .name-23GUGE,
+.modeSelected-346R90 .icon-1DeIlz, 
+.modeSelected-346R90:hover .icon-1DeIlz {
     color: rgb(171, 171, 171);
     opacity: 1;
 }
 
-.modeSelected-1zApJ_ .content-3at_AU, 
-.modeSelected-1zApJ_:hover .content-3at_AU,
-.listDefault-2y5Z9D .clickable-23RaYz.selected-3TGCSZ .content-3xS9Lh {
+.modeSelected-346R90 .content-1x5b-n, 
+.modeSelected-346R90:hover .content-1x5b-n,
+.listDefault-3ir5aS .clickable-1lCRLF.selected-3t3Csj .content-1Wq3SX {
     background-color: rgba(107, 130, 206, 0.5) !important;
     border: none !important;
 }
   
-.content-3at_AU {
+.content-1x5b-n {
     border-radius: 7px;
 }
 
-.wrapper-1ucjTd:hover .content-3at_AU,
-.listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh {
+.wrapper-2jXpOf:hover .content-1x5b-n,
+.listDefault-3ir5aS .clickable-1lCRLF:hover .content-1Wq3SX {
     background-color: rgba(0, 0, 0, 0.28);
     border: 2px solid rgba(255,255,255,.1);
 }
 
-.modeMuted-3osy7j .icon-1_QxNX, 
-.modeMuted-3osy7j .name-3_Dsmg {
+.modeMuted-3osy7j .icon-1DeIlz, 
+.modeMuted-3osy7j .name-23GUGE {
     color: #686868;
     text-shadow: 0 0 12px #686868,0 0 12px #686868,0 0 12px #686868;
     opacity: 0.7;
     overflow: visible;
 }
 
-.wrapper-1ucjTd.modeLocked-SZJhTy .name-3_Dsmg,
-.wrapper-1ucjTd.modeLocked-SZJhTy .icon-1_QxNX {
+.wrapper-2jXpOf.modeLocked-SZJhTy .name-23GUGE,
+.wrapper-2jXpOf.modeLocked-SZJhTy .icon-1DeIlz {
     color: red;
     text-shadow: 0 0 12px red,0 0 12px red,0 0 12px red;
     opacity: 0.8;
@@ -1482,7 +1483,7 @@
  color:white;
 }
 
-.header-2o-2hj {
+.header-2V-4Sw {
     background: rgba(0, 0, 0, 0.392);
     box-shadow: none;
     color: white;
