--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -768,19 +768,19 @@
   background: none;
 }
 
-.clickable-2ap7je .header-2o-2hj:hover, .selected-WP3kCM .header-2o-2hj {
+.clickable-25tGDB .header-2V-4Sw:hover, .selected-31Nl7x .header-2V-4Sw {
   background-color: rgba(0, 0, 0, .26);
 }
 
-.avatarSpeaking-3MqCHL {
+.avatarSpeaking-2IGMRN {
   box-shadow: 0 0 0 2px #26a96a, inset 0 0 0 1px black;
 }
 
-.avatar-3elDyV {
+.avatar-3tNQiO {
   border-radius: 4px;
 }
 
-.header-2o-2hj {
+.header-2V-4Sw {
   box-shadow: none;
   color: white;
 }
@@ -845,7 +845,7 @@
   fill: #805d4c;
 }
 
-.container-PNkimc, .sidebar-2K8pFh, .panels-j1Uci_, .chat-3bRxxu, .messages-3amgkR {
+.container-3w7J-x, .sidebar-2K8pFh, .panels-j1Uci_, .chat-3bRxxu, .messages-3amgkR {
   background-color: transparent;
 }
 
@@ -1025,7 +1025,7 @@
 }
 
 .theme-dark .operations-36ENbA, .itemBase-tz5SeC, .item-1Yvehc .hint-22uc-R, #app-mount .item-1Yvehc.danger-2dXSTE:hover .hint-22uc-R,
-.container-3-pyIM, .wrapper-CU3qI5 {
+.container-3-pyIM, .wrapper-PY0fhH {
   color: white;
 }
 
@@ -1090,24 +1090,24 @@
   border: none;
 }
 
-.wrapper-CU3qI5 {
+.wrapper-PY0fhH {
   background: rgba(128, 93, 76, .66);
 }
 
-#app-mount .name-IbjUBS, .modeSelected-1zApJ_ .icon-1_QxNX, .modeSelected-1zApJ_:hover .icon-1_QxNX {
+#app-mount .name-3l27Hl, .modeSelected-346R90 .icon-1DeIlz, .modeSelected-346R90:hover .icon-1DeIlz {
   color: white;
 }
 
-.unread-3zKkbm {
+.unread-2lAfLh {
   display: none;
 }
 
-.modeUnread-1zpFdA .icon-1_QxNX, .modeUnread-1zpFdA:hover .icon-1_QxNX,
-.modeUnread-1zpFdA .name-3_Dsmg, .modeUnread-1zpFdA:hover .name-3_Dsmg {
+.modeUnread-1qO3K1 .icon-1DeIlz, .modeUnread-1qO3K1:hover .icon-1DeIlz,
+.modeUnread-1qO3K1 .name-23GUGE, .modeUnread-1qO3K1:hover .name-23GUGE {
   color: #75b875;
 }
 
-.name-3_Dsmg, .icon-1_QxNX {
+.name-23GUGE, .icon-1DeIlz {
   color: rgb(255, 255, 255, .2);
 }
 
@@ -1115,28 +1115,28 @@
   background-color: transparent;
 }
 
-.wrapper-1ucjTd:hover .content-3at_AU, .listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh {
+.wrapper-2jXpOf:hover .content-1x5b-n, .listDefault-3ir5aS .clickable-1lCRLF:hover .content-1Wq3SX {
   background-color: rgba(148, 111, 94, .2);
 }
 
-.modeSelected-1zApJ_ .content-3at_AU, .modeSelected-1zApJ_:hover .content-3at_AU, .listDefault-2y5Z9D .clickable-23RaYz.selected-3TGCSZ .content-3xS9Lh {
+.modeSelected-346R90 .content-1x5b-n, .modeSelected-346R90:hover .content-1x5b-n, .listDefault-3ir5aS .clickable-1lCRLF.selected-3t3Csj .content-1Wq3SX {
   background-color: #805d4c;
 }
 
-.wrapper-pZmgj4 {
+.wrapper-2tAnRe {
   border-radius: 4px;
   color: white;
 }
 
-.users-i_3-kL {
+.users-3kndPl {
   background-color: #805d4c;
 }
 
-.total-3tKGEB {
+.total-i6us2n {
   background-color: #946f5e;
 }
 
-.total-3tKGEB:after {
+.total-i6us2n:after {
   border-right-color: #946f5e;
 }
 
