Shows divider now

--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -1768,12 +1768,12 @@
 }
 
 .divider-JfaTT5 {
-    border: none;
+    border: 1px solid #f4acc5;
 }
 
 #app-mount .content-1o0f9g {
     color: white;
-    background-color: rgba(255,255,255,.082);
+    background-color: black;
     padding: 4px 7px;
 }
 
