--- a/My_Theme_Collection/AkameGaKill.theme.css
+++ b/My_Theme_Collection/AkameGaKill.theme.css
@@ -3,7 +3,7 @@
 #app-mount .app-2rEoOp {
   background-color: transparent;
   background-size: cover;
-  background-image: url(https://images5.alphacoders.com/542/542751.jpg);
+  background-image: url(https://images3.alphacoders.com/774/thumb-1920-774818.png);
 }
 
 .layers-3iHuyZ {
